Implement home and profile
* Add home screen with books
* Add profile page with user info
* Add bottom navigation bar
* Add Book detailed view
* Add transaction card

--- a/LITrary/app/src/main/res/layout/activity_transaction.xml
+++ b/LITrary/app/src/main/res/layout/activity_transaction.xml
@@ -1,27 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/white"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.choprarohan.litrary.MainActivity"
-    android:orientation="vertical">
-
-
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="@color/colorPrimary"
-            />
-
-    </android.support.design.widget.AppBarLayout>
+    android:layout_height="match_parent">
 
 
     <FrameLayout
@@ -30,7 +12,7 @@
         android:layout_height="0dp"
         android:layout_weight="1">
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/bookList"
+            android:id="@+id/txnList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
         </android.support.v7.widget.RecyclerView>
@@ -47,5 +29,6 @@
         android:foregroundTint="@color/white"
         android:background="@color/background"
         app:menu="@menu/navigation" />
+
 
 </LinearLayout>
