--- a/LITrary/app/src/main/res/layout/card_book.xml
+++ b/LITrary/app/src/main/res/layout/card_book.xml
@@ -1,12 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:card_view="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:paddingTop="8dp"
+    android:padding="8dp"
+    android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/bookImage"
+    <android.support.v7.widget.CardView
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@mipmap/ic_launcher" />
+        app:cardElevation="4dp"
+        app:cardUseCompatPadding="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        card_view:cardCornerRadius="4dp"
+        >
+    <ImageView
+        android:id="@+id/bookImage"
+        android:layout_width="110dp"
+        android:layout_height="170dp"
+        android:adjustViewBounds="true"
+        android:src="@drawable/book" />
+    </android.support.v7.widget.CardView>
 </LinearLayout>
