--- a/LITrary/app/src/main/res/layout/card_txn.xml
+++ b/LITrary/app/src/main/res/layout/card_txn.xml
@@ -38,6 +38,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:padding="8dp"
+                android:layout_marginTop="-4dp"
                 android:layout_marginLeft="8dp"
                 android:orientation="vertical"
                 >
