--- a/templates/mine.html
+++ b/templates/mine.html
@@ -11,5 +11,8 @@
 		<h4> Amount: {{ block['data']['transactions'][0]['amount']}} </h4>
 		<h3> Proof of work: {{ block['data']['proof-of-work'] }} </h3>
 		<h3> Hash: {{ block['hash'] }} </h3>
+		<br><br>
+		<h2> {{ block }} </h2>
+
 	</body>
 </html>
