--- a/LITrary/app/src/main/res/layout/activity_main.xml
+++ b/LITrary/app/src/main/res/layout/activity_main.xml
@@ -13,13 +13,48 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme">
-
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/colorPrimary"
-            />
+            android:layout_toLeftOf="@+id/button_add"
+            android:background="@color/colorPrimary">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_search_white_24dp"
+                android:layout_marginTop="16dp"
+                android:tint="@color/colorAccent"
+                />
+            <EditText
+                android:layout_width="236dp"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="8dp"
+                android:textColorHighlight="@color/white"
+                android:shadowColor="@color/white"
+                android:textColorHint="@color/white"
+                android:textColorLink="@color/white"
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="32dp"
+                />
+
+            <android.support.v7.widget.AppCompatImageButton
+                android:id="@+id/button_add"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:tint="@color/colorAccent"
+                android:layout_marginLeft="32dp"
+                android:background="@color/colorPrimary"
+                android:src="@drawable/ic_add_circle_outline_white_24dp" />
+
+            </LinearLayout>
+
+        </android.support.v7.widget.Toolbar>
+
 
     </android.support.design.widget.AppBarLayout>
 
