--- a/LITrary/app/src/main/res/values/colors.xml
+++ b/LITrary/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="black">#000000</color>
     <color name="gray">#d3d3d3</color>
     <color name="white">#fff</color>
+    <color name="orange">#ffc000</color>
+    <color name="green">#008000</color>
 </resources>
